--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>form</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <div class="container">
-        <form action="/action_page.php" method="POST" autocomplete="on">
+        <form action="action_page.php" method="POST" autocomplete="on">
             <label for="fname">Name</label><br>
             <input type="text" id="name" name="fname" required><br>
             <label for="email">Email</label><br>
@@ -18,4 +18,5 @@
         </form>
     </div>
 </body>
+
 </html>
